force-app/main/default/objects/OpportunityLineItem/fields/Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Product_Details__c</fullName>
    <description>Formula that shows Direct Lube, KPP Lube, Allied Product or Parts Washer types</description>
    <formula>if(not(isblank(Direct_Lube_Details__c)),Direct_Lube_Details__c
,if(not(isblank( KPP_Oil_Details__c )),KPP_Oil_Details__c
,if(not(isblank(text(Allied_Product_Type__c))),text(Allied_Product_Type__c)
,if(not(isblank(text(Parts_Washer_Type__c))),text(Parts_Washer_Type__c)
,&quot;&quot;
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Details</label>
    <type>Text</type>
</CustomField>