force-app/main/default/objects/OpportunityLineItem/fields/Product_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Product_Gallons__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Product Gallons</description>
    <inlineHelpText>Number of gallons for the opportunity. Does not factor into price calculation.</inlineHelpText>
    <label>Product Gallons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>