force-app/main/default/objects/OpportunityLineItem/fields/Product_Pounds__c.field-meta.xml
<CustomField>
    <fullName>Product_Pounds__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of pounds for the opportunity. Does not factor into price calculation.</description>
    <inlineHelpText>Number of pounds for the opportunity. Does not factor into price calculation.</inlineHelpText>
    <label>Product Pounds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>