force-app/main/default/objects/OpportunityLineItem/fields/Product_Primary_Business__c.field-meta.xml
<CustomField>
    <fullName>Product_Primary_Business__c</fullName>
    <description>Primary business listed on the product</description>
    <formula>text(PricebookEntry.Product2.Primary_Business__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Primary Business</label>
    <type>Text</type>
</CustomField>