force-app/main/default/objects/OpportunityLineItem/fields/Sales_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Business_Unit__c</fullName>
    <formula>text(Branch__r.Branch_Operating_Business__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Operating Business</label>
    <type>Text</type>
</CustomField>