force-app/main/default/objects/OpportunityLineItem/fields/Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Type__c</fullName>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Divide Amount into multiple installments</fullName>
                <default>true</default>
                <label>Divide Amount into multiple installments</label>
            </value>
            <value>
                <fullName>Repeat Amount for each installment</fullName>
                <isActive>false</isActive>
                <label>Repeat Amount for each installment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>