force-app/main/default/objects/OpportunityLineItem/fields/Service_Term__c.field-meta.xml
<CustomField>
    <fullName>Service_Term__c</fullName>
    <defaultValue>52</defaultValue>
    <description>Frequency in weeks of service</description>
    <inlineHelpText>Frequency in weeks of service.  How many weeks between services?</inlineHelpText>
    <label>Service Term (Weeks)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>