force-app/main/default/objects/OpportunityLineItem/fields/Stage_Reference__c.field-meta.xml
<CustomField>
    <fullName>Stage_Reference__c</fullName>
    <formula>text(Opportunity.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Reference</label>
    <type>Text</type>
</CustomField>