force-app/main/default/objects/OpportunityLineItem/fields/Technical_Sales_Expert__c.field-meta.xml
<CustomField>
    <fullName>Technical_Sales_Expert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TSE (Waste Projects - Remediation)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>TSE (Waste Projects - Remediation) on Opportunity Product must be Sales Person / Technical Specialist Type</errorMessage>
        <filterItems>
            <field>User.Sales_Person_Type__c</field>
            <operation>equals</operation>
            <value>Technical Sales Expert, Technical Sales Manager, Sales Representative, Specialist</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>