force-app/main/default/objects/OpportunityLineItem/validationRules/Backhaul_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Backhaul_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), Product2.Name =&apos;Transportation&apos;, ISBLANK( TEXT( Backhaul_Lane__c) ))</errorConditionFormula>
	<errorDisplayField>Backhaul_Lane__c</errorDisplayField> 
    <errorMessage>Backhaul Lane is required for Transportation</errorMessage>
</ValidationRule>