force-app/main/default/objects/OpportunityLineItem/validationRules/KPP_Family_and_UOM.validationRule-meta.xml
<ValidationRule>
    <fullName>KPP_Family_and_UOM</fullName>
    <active>true</active>
    <description>Must enter a KPP Family and UOM</description>
    <errorConditionFormula>and(
not(isblank(text(KPP_Oil_Product__c )))
,or(
isblank(text( KPP_Oil_Family__c))
,isblank(text( KPP_Oil_UOM__c))
)
)</errorConditionFormula>
    <errorDisplayField>KPP_Oil_Family__c</errorDisplayField>
    <errorMessage>Must enter a KPP Family and UOM when entering a KPP oil product</errorMessage>
</ValidationRule>