force-app/main/default/objects/OpportunityLineItem/validationRules/KPP_Oil_Product_Base.validationRule-meta.xml
<ValidationRule>
    <fullName>KPP_Oil_Product_Base</fullName>
    <active>true</active>
    <description>KPP Oil products for base should only on base LOB</description>
    <errorConditionFormula>and(
text(KPP_Oil_Product__c) = &quot;Base Oil&quot; 
, Product2.LOB_Code__c&lt;&gt;59
)</errorConditionFormula>
    <errorDisplayField>KPP_Oil_Product__c</errorDisplayField>
    <errorMessage>Base Oil Product should only be entered on Base Oil Lines of Business.  Please check the Line of business you selected</errorMessage>
</ValidationRule>