force-app/main/default/objects/OpportunityLineItem/validationRules/KPP_Oil_Product_Specialty.validationRule-meta.xml
<ValidationRule>
    <fullName>KPP_Oil_Product_Specialty</fullName>
    <active>true</active>
    <description>KPP -Specialty Products for oil should only on KPP -Specialty Products LOB</description>
    <errorConditionFormula>and(
or(
text(KPP_Oil_Product__c) = &quot;Fuel&quot; 
,text(KPP_Oil_Product__c) = &quot;Mineral Spirits&quot; 
,text(KPP_Oil_Product__c) = &quot;Bottoms&quot; 
)
, Product2.LOB_Code__c&lt;&gt;75
)</errorConditionFormula>
    <errorDisplayField>KPP_Oil_Product__c</errorDisplayField>
    <errorMessage>Specialty Oil Products should only be entered on Specialty Oil Line of Business.  Please check the Line of business you selected</errorMessage>
</ValidationRule>