force-app/main/default/objects/OpportunityLineItem/validationRules/KPP_Oil_Product_Specialty_and_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>KPP_Oil_Product_Specialty_and_Contract</fullName>
    <active>true</active>
    <description>KPP -Specialty Products for oil should only on KPP -Specialty Products LOB</description>
    <errorConditionFormula>and(
text(KPP_Oil_Product__c) = &quot;Chemicals&quot; 
, Product2.LOB_Code__c&lt;&gt;75
, Product2.LOB_Code__c&lt;&gt;85
, Product2.LOB_Code__c&lt;&gt;91)</errorConditionFormula>
    <errorDisplayField>KPP_Oil_Product__c</errorDisplayField>
    <errorMessage>Chemical Products should only be entered on Antifreeze Sales, Specialty Oil or Contract Blending Lines of Business.  Please check the Line of business you selected</errorMessage>
</ValidationRule>