force-app/main/default/objects/OpportunityLineItem/validationRules/Select_Opp_Business_Segment_Cross_Sell.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Opp_Business_Segment_Cross_Sell</fullName>
    <active>true</active>
    <description>Select Opportunity Business Segment before adding product for cross sell opportunities</description>
    <errorConditionFormula>AND(Opportunity.Cross_Sell__c,ISBLANK(TEXT(  Opportunity.Opportunity_Business_Segment__c)))</errorConditionFormula>
    <errorDisplayField>Branch__c</errorDisplayField>
    <errorMessage>Only Quote Specialist can Add Product for TPM Cross Sell Opportunity. Please Hit Submit Quote Request Checkbox to get Quote Support.</errorMessage>
</ValidationRule>